alignment fix

--- a/src/pages/Team/Team.css
+++ b/src/pages/Team/Team.css
@@ -38,8 +38,8 @@
     min-height: 50vh;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
-    margin-top: 20px;
+    align-items: flex-start;
+    margin-top: 25px;
 }
 
 .member {
@@ -97,6 +97,10 @@
 
   .team_inner_container h1 {
     text-align: center;
+  }
+
+  .team_members {
+    align-items: center;
   }
 
   .member_name {
